--- a/assets/web/config.html
+++ b/assets/web/config.html
@@ -305,6 +305,7 @@
                     <option value="nvenc">nVidia NVENC</option>
                     <option value="amdvce">AMD AMF/VCE</option>
                     <option value="vaapi">VA-API</option>
+                    <option value="videotoolbox">VideoToolbox</option>
                     <option value="software">Software</option>
                 </select>
                 <div class="form-text">
@@ -454,6 +455,34 @@
             <input class="form-control" id="adapter_name" placeholder="/dev/dri/renderD128"
                 v-model="config.adapter_name">
         </div>
+        <!--VideoToolbox Encoder Settings-->
+        <div v-if="currentTab === 'vt'" class="config-page">
+            <!--Presets-->
+            <div class="mb-3">
+                <label for="vt_coder" class="form-label">VideoToolbox Coder</label>
+                <select id="vt_coder" class="form-select" v-model="config.vt_coder">
+                    <option value="auto">auto</option>
+                    <option value="cabac">cabac</option>
+                    <option value="cavlc">cavlc</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label for="vt_software" class="form-label">VideoToolbox Software Encoding</label>
+                <select id="vt_software" class="form-select" v-model="config.vt_software">
+                    <option value="auto">auto</option>
+                    <option value="disabled">disabled</option>
+                    <option value="allowed">allowed</option>
+                    <option value="forced">forced</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label for="vt_realtime" class="form-label">VideoToolbox Realtime Encoding</label>
+                <select id="vt_realtime" class="form-select" v-model="config.vt_realtime">
+                    <option value="enabled">enabled</option>
+                    <option value="disabled">disabled</option>
+                </select>
+            </div>
+        </div>
     </div>
     <div class="alert alert-success my-4" v-if="success"><b>Success!</b> Restart Sunshine to apply changes</div>
     <div class="mb-3 buttons">
@@ -509,6 +538,10 @@
                 {
                     id: "va-api",
                     name: "VA-API encoder"
+                },
+                {
+                    id: "vt",
+                    name: "VideoToolbox encoder"
                 }
                 ]
             }
@@ -545,6 +578,9 @@
                 this.config.nv_coder = this.config.nv_coder || 'auto';
                 this.config.amd_quality = this.config.amd_quality || 'default';
                 this.config.amd_rc = this.config.amd_rc || 'auto';
+                this.config.vt_software = this.config.vt_software || 'auto';
+                this.config.vt_realtime = this.config.vt_realtime || 'enabled';
+                this.config.vt_coder = this.config.nv_coder || 'auto';
                 this.config.fps = this.config.fps || '[10, 30, 60, 90, 120]';
                 this.config.resolutions = this.config.resolutions || '[352x240,480x360,858x480,1280x720,1920x1080,2560x1080,3440x1440,1920x1200,3860x2160,3840x1600]';
                 this.fps = JSON.parse(this.config.fps);
